--- a/html/index.html
+++ b/html/index.html
@@ -98,6 +98,8 @@
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
+                          <li><a href="post-headstart-campaign.html">להשתתף בקמפיין מימון ההמון</a></li>
+
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
                           <li><a href="post-bio-ad-meme.html">מים “בטוח שכדאי”</a></li>
@@ -112,7 +114,7 @@
                       </ul>
                   </li>
                   <li class="dropdown">
-                      <a data-toggle="dropdown" href="#">מחאת האקדמיה<b class="caret"></b></a>
+                      <a data-toggle="dropdown" href="#">מחאה באקדמיה<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
                           <li><a href="post-letters-to-knesset.html">מכתבי המדענים והאקדמאים</a></li>
