Adjusting to new bootstrap jargon :/

--- a/html/post-bill-to-cancel-bio-db.html
+++ b/html/post-bill-to-cancel-bio-db.html
@@ -97,7 +97,7 @@
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
-                          <li><a href="post-headstart-campaign.html">להשתתף בקמפיין מימון ההמון</a></li>
+                          <li><a href="post-brand_use_cc.html">להטמיע את הקמפיין</a></li>
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
@@ -126,6 +126,8 @@
 
                           <li><a href="post-dani-dolev.html">פרופ’ דני דולב</a></li>
 
+                          <li><a href="post-omer-reingold.html">פרופ’ עומר ריינגולד</a></li>
+
                           <li><a href="post-karine-nahon.html">פרופ’ קרין נהון</a></li>
                       </ul>
                   </li>
@@ -152,12 +154,10 @@
       <!-- Begin page content -->
       <div class="container">
         <div class="page-header text-center">
-          <div class="span12">
-            <h2>הצביעו בעד החוק לביטול המאגר</h2>
-          </div>
+          <h2>הצביעו בעד החוק לביטול המאגר</h2>
         </div>
         <div class="row">
-          <div class="span12">
+          <div class="col-8 col-offset-2">
             
             <p dir="rtl" style="text-align: right;">ל<a href="http://oknesset.org/bill/6751/" target="_blank">הצעת החוק שהוגשה במרץ 2013 </a>ועניינה ביטול חובת המאגר הביומטרי מחוק תעודות מזהות מצטרפים עוד ועוד חברי וחברות כנסת. לאור פעולות הסברה מצד התנגדים והלך הרוח בציבור, חברי כנסת במעגלים מתרחבים מבינים כי קהל הבוחרים שלהם לא יעריך תמיכה במאגר הביומטרי. חברי כנסת ממפלגות יש עתיד, הליכוד-ביתנו, חד&#8221;ש, העבודה, מרצ ואגודת ישראל הביעו ספקות באשר לנחיצות המאגר וככל שעובר הזמן ומתבהרת התמונה מביעים התנגדות נחרצת אליו.</p>
 <p><iframe id="embed-widget" style="width: 450px; max-width: 100%; height: 375px;" src="http://oknesset.org/bill/6751/embed/" height="240" width="320" frameborder="0"></iframe></p>
