--- a/html/post-catching-criminal.html
+++ b/html/post-catching-criminal.html
@@ -97,7 +97,7 @@
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
-                          <li><a href="post-headstart-campaign.html">להשתתף בקמפיין מימון ההמון</a></li>
+                          <li><a href="post-brand_use_cc.html">להטמיע את הקמפיין</a></li>
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
@@ -126,6 +126,8 @@
 
                           <li><a href="post-dani-dolev.html">פרופ’ דני דולב</a></li>
 
+                          <li><a href="post-omer-reingold.html">פרופ’ עומר ריינגולד</a></li>
+
                           <li><a href="post-karine-nahon.html">פרופ’ קרין נהון</a></li>
                       </ul>
                   </li>
@@ -152,14 +154,12 @@
       <!-- Begin page content -->
       <div class="container">
         <div class="page-header text-center">
-          <div class="span12">
-            <h2>האם המאגר הביומטרי יקל על לכידת פושעים?</h2>
-          </div>
+          <h2>האם המאגר הביומטרי יקל על לכידת פושעים?</h2>
         </div>
         <div class="row">
-          <div class="span12">
+          <div class="col-8 col-offset-2">
             
-            <p>עבריינים רבים יודעים להימנע מהשארת פרטים מזהים בזירה, לכן מאגר ביומטרי לא יהיה יעיל נגדם. בפועל, המאגר יאפשר הטרדה ולעיתים אפילו הפללה של אזרחים שכל חטאם היה הימצאות בסמוך לזירת פשע. כל חקירה תספק מאות חשודים פוטנציאליים, והמשטרה תצטרך להשקיע עבודה רבה בחקירתם, במקום בחקירת הפשע עצמו.</p>
+            <p>עבריינים רבים יודעים להימנע מהשארת פרטים מזהים בזירה, לכן מאגר ביומטרי לא יהיה יעיל נגדם. בפועל, המאגר יאפשר הטרדה ולעיתים אפילו הפללה של אזרחים שכל חטאם היה הימצאות בסמוך לזירת פשע. כל חקירה תספק מאות חשודים פוטנציאליים, והמשטרה תצטרך להשקיע עבודה רבה בחקירתם (תוך גרימת <a href="http://www.haaretz.co.il/misc/1.1195331" target="_blank">עוגמת נפש</a> לנחקרים), במקום בחקירת הפשע עצמו.</p>
 
           </div>
         </div>
