--- a/html/post-current-status.html
+++ b/html/post-current-status.html
@@ -97,7 +97,7 @@
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
-                          <li><a href="post-headstart-campaign.html">להשתתף בקמפיין מימון ההמון</a></li>
+                          <li><a href="post-brand_use_cc.html">להטמיע את הקמפיין</a></li>
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
@@ -126,6 +126,8 @@
 
                           <li><a href="post-dani-dolev.html">פרופ’ דני דולב</a></li>
 
+                          <li><a href="post-omer-reingold.html">פרופ’ עומר ריינגולד</a></li>
+
                           <li><a href="post-karine-nahon.html">פרופ’ קרין נהון</a></li>
                       </ul>
                   </li>
@@ -152,12 +154,10 @@
       <!-- Begin page content -->
       <div class="container">
         <div class="page-header text-center">
-          <div class="span12">
-            <h2>תמונת מצב</h2>
-          </div>
+          <h2>תמונת מצב</h2>
         </div>
         <div class="row">
-          <div class="span12">
+          <div class="col-8 col-offset-2">
             
             <ul>
 <li dir="rtl"><strong>8/7/13:</strong> <a href="http://www.ynet.co.il/articles/0,7340,L-4401747,00.html" target="_blank">הפיילוט למאגר מתחיל</a> בלשכות האוכלוסין בראשון לציון ואשדוד.</li>
@@ -187,8 +187,9 @@
 </blockquote>
 </li>
 </ul>
-<p dir="rtl" id="oknesset" align="center">לא נשכח בקלפי מי <a href="http://oknesset.org/vote/652/" target="_blank">הצביע</a> בעד רמיסת הפרטיות שלנו (באדיבות <a title="כבוד לצוות הסדנה לידע ציבורי" href="http://oknesset.org" target="_blank">כנסת פתוחה</a>):</p>
-<p><iframe id="embed-widget" style="width: 450px; max-width: 100%; height: 375px;" src="https://oknesset.org/bill/4194/embed/" height="240" width="320" frameborder="0"></iframe></p>
+<p dir="rtl" id="oknesset" align="center">לא נשכח בקלפי מי <a href="http://oknesset.org/vote/652/" target="_blank">הצביעו</a> בעד רמיסת הפרטיות שלנו (באדיבות <a title="כבוד לצוות הסדנה לידע ציבורי" href="http://oknesset.org" target="_blank">כנסת פתוחה</a>):</p>
+<p><iframe id="embed-widget" style="width: 450px; max-width: 100%; height: 375px;" src="https://oknesset.org/bill/4194/embed/" height="240" width="320" frameborder="0"></iframe><br />
+ראו גם: <a href="http://is.gd/map2bio" target="_blank">איפה הם גרים</a>.</p>
 
           </div>
         </div>
