--- a/html/post-mevaker.html
+++ b/html/post-mevaker.html
@@ -97,7 +97,7 @@
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
-                          <li><a href="post-headstart-campaign.html">להשתתף בקמפיין מימון ההמון</a></li>
+                          <li><a href="post-brand_use_cc.html">להטמיע את הקמפיין</a></li>
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
@@ -126,6 +126,8 @@
 
                           <li><a href="post-dani-dolev.html">פרופ’ דני דולב</a></li>
 
+                          <li><a href="post-omer-reingold.html">פרופ’ עומר ריינגולד</a></li>
+
                           <li><a href="post-karine-nahon.html">פרופ’ קרין נהון</a></li>
                       </ul>
                   </li>
@@ -152,12 +154,10 @@
       <!-- Begin page content -->
       <div class="container">
         <div class="page-header text-center">
-          <div class="span12">
-            <h2>דו”ח מבקר המדינה 2010</h2>
-          </div>
+          <h2>דו”ח מבקר המדינה 2010</h2>
         </div>
         <div class="row">
-          <div class="span12">
+          <div class="col-8 col-offset-2">
             
             <h4 dir="rtl"><a href="http://www.mevaker.gov.il/serve/contentTree.asp?bookid=595&amp;id=193&amp;contentid=11664&amp;parentcid=undefined&amp;bctype=11663&amp;sw=1280&amp;hw=730#thisTr64" target="_blank">המסמך באתר מבקר המדינה</a></h4>
 <p dir="rtl"><a href="http://technation.themarker.com/internet-technologies/1.1768804" target="_blank">דה מארקר</a>: דו&#8221;ח מבקר המדינה שמתפרסם היום, מותח ביקורת חריפה על התנהלות משרד הפנים בקידום תעודות הזהות החכמות, ומצביע על שורת מחדלים בהליך קבלת ההחלטות וניהול התקציבים בנושא</p>
