--- a/html/post-the-problem.html
+++ b/html/post-the-problem.html
@@ -97,7 +97,7 @@
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
-                          <li><a href="post-headstart-campaign.html">להשתתף בקמפיין מימון ההמון</a></li>
+                          <li><a href="post-brand_use_cc.html">להטמיע את הקמפיין</a></li>
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
@@ -126,6 +126,8 @@
 
                           <li><a href="post-dani-dolev.html">פרופ’ דני דולב</a></li>
 
+                          <li><a href="post-omer-reingold.html">פרופ’ עומר ריינגולד</a></li>
+
                           <li><a href="post-karine-nahon.html">פרופ’ קרין נהון</a></li>
                       </ul>
                   </li>
@@ -152,37 +154,36 @@
       <!-- Begin page content -->
       <div class="container">
         <div class="page-header text-center">
-          <div class="span12">
-            <h2>מה הבעיה?</h2>
-          </div>
+          <h2>מה הבעיה?</h2>
         </div>
         <div class="row">
-          <div class="span12">
+          <div class="col-8 col-offset-2">
             
             <p dir="rtl">תעודות הזהות שלנו מורכבות מפלסטיק, נייר ותמונה. כבר בשנות ה-90 של המאה הקודמת היה ברור שעם ההתפתחות הטכנולוגית, נוצרות (והולכות ומחריפות) שתי בעיות:</p>
 <ol>
-<li dir="rtl">בעיה של הממשל: קל לזייף תעודות</li>
+<li dir="rtl">בעיה של השלטון: קל לזייף תעודות</li>
 <li dir="rtl">בעיה של האזרחים: קל (לממשלה, לממשלות אחרות, לגורמים מסחריים, לעבריינים, ולטרוריסטים) לבלוש עליהם באמצעות הצלבת נתונים.</li>
 </ol>
 <h3 dir="rtl">איך אפשר לפתור את הבעיות האלה?</h3>
 <h4 dir="rtl">בעיית הזיוף</h4>
+<p dir="rtl">קודם כל, הבהרה חשובה: יחסי הציבור של המאגר מתמקדים בהצגת בעיית הזיוף כ<strong>בעיה של האזרח</strong> (מישהו יתחזה אליך). אם (כמו שנראה מייד) זו תוצאה של הזנחה ממושכת של השלטון, כל אחד יוכל לטעון בבית משפט &#8220;זה לא אני&#8221; (בצדק, או שלא בצדק). זו <strong>בעיה של השלטון</strong>. מצד שני, יש אזרחים שנפגעים ממנה (<a href="post-forgery-statistics.html" target="_blank">היקף הבעיה לא ידוע</a>, אבל היא צפויה להחמיר עם התפתחות הטכנולוגיה). לכן חשוב שהשלטון יפסיק להתרשל וייתן לה מענה אמיתי.</p>
 <p dir="rtl">כבר בסוף המאה הקודמת היתה אפשרות לעבור לתעודות זהות חכמות שיש בהן שבב דיגיטלי, המונעות זיופים ומאפשרות ביטול במקרה של אובדן או גניבה. ברגע שאזרח מדווח שהתעודה החכמה שלו אבדה, היא מבוטלת אוטומטית, ולכן אין טעם לגנוב תעודות כאלה, ואכן אז יצא המכרז הראשון לתעודה חכמה. אם המהלך הזה לא היה מוכשל שוב ושוב על ידי גורמים שונים (ראו <a href="post-mevaker.html" target="_blank">דו&#8221;ח מבקר המדינה 2010</a>), הבעיה כבר היתה נפתרת.</p>
-<p dir="rtl">ביומטריה (ללא מאגר) היא טכנולוגיה שהתפתחה מאוחר יותר, ויכולה להגן על הממשל מפני תחמנויות של האזרח. אדם לא יוכל, למשל, להצביע בשם אביו החולה (אפילו לא בהסכמתו).</p>
+<p dir="rtl">ביומטריה (ללא מאגר) היא טכנולוגיה שהתפתחה מאוחר יותר, ויכולה להגן על השלטון מפני תחמנויות של האזרח. אדם לא יוכל, למשל, להצביע בשם אביו החולה (אפילו לא בהסכמתו).</p>
 <p dir="rtl">הנתונים הביומטריים של האזרח נשמרים על התעודה שלו בלבד (אלא אם כן היתה הדלפה פלילית בזמן הנפקת התעודה או בעמדות הזיהוי), ומשמשים כ&#8221;נצרה&#8221; שמונעת שימוש בתעודה על ידי אדם אחר. עמדת הזיהוי סורקת את המידע הביומטרי (טביעת אצבע או פנים) ומעבירה אותו לשבב שעל התעודה כדי שזה יאשר שזה אכן בעל התעודה. אדם אחר לא יעבור את הזיהוי.</p>
-<p dir="rtl">האם יש צורך בטכנולוגיה כזו? האם היתרונות מצדיקים את העיכוב המסוכן והעלויות הנוספות? אולי לא, אבל לפחות לא מדובר בנזק בלתי הפיך לכל אזרחי המדינה.</p>
+<p dir="rtl">האם יש צורך בטכנולוגיה כזו? האם היתרונות מצדיקים את העיכוב המסוכן והעלויות הנוספות? <a href="http://www.haaretz.co.il/captain/gadget/1.2124671" target="_blank">אולי לא</a>, אבל לפחות לא מדובר בנזק בלתי הפיך לכל אזרחי המדינה.</p>
 <p dir="rtl">מאגר ביומטרי הוא גירסה מודרנית של סימון בקר או קעקוע של מספר על הזרוע:</p>
 <ul dir="rtl">
 <li dir="rtl">הוא מייתר את הצורך בתעודה או בשיתוף פעולה מצד האזרח לצורך זיהויו</li>
 <li dir="rtl">הדרך להגביל <strong>מי</strong> יוכל לבצע את הזיהוי (שוטר, סוחר, פושע, וכו&#8217;) היא על ידי שמירת סוד (הנתונים הביומטריים של אותו אזרח), שאם דלף &#8211; <strong>אי אפשר טכנית לבטל אותו</strong></li>
 </ul>
-<p dir="rtl">כלומר, לצורך פתרון בעיית הזיוף (הבעיה של הממשל), מחריף הממשל את בעיית הבילוש והצלבת המידע (הבעיה של האזרח) באופן בלתי הפיך (אצבע אי אפשר להחליף, ומידע שדלף אי אפשר להחזיר לבקבוק)</p>
+<p dir="rtl">כלומר, לצורך פתרון בעיית הזיוף (הבעיה של השלטון), מחריף השלטון את בעיית הבילוש והצלבת המידע (הבעיה של האזרח) באופן בלתי הפיך (אצבע אי אפשר להחליף, ומידע שדלף אי אפשר להחזיר לבקבוק)</p>
 <h4 dir="rtl">בעיית הבילוש והצלבת המידע</h4>
 <p dir="rtl">כידוע, מאגרי מידע שונים דולפים בדרכים מפוקפקות יותר או פחות, ומשמשים בידי גורמים מסחריים, פליליים, וכו&#8217; לעקוב אחרי אנשים. מחוקרים פרטיים <a title="משרד פרסום גנב את זהותו של אדם - כולל פניו" href="http://www.ice.co.il/article/view/364231" target="_blank">ומפעילי &#8220;עוקץ ניגרי&#8221;</a> ועד לחברות פירסום וה-NSA, כל אוחד לוקח את כל המידע שהוא יכול להצליב (על פי כרטיס אשראי, תאריך לידה, פעילות ברשתות חברתיות, איכון סלולרי וכו&#8217;) ומנסה לשייך פיסות מידע זו לזו ברמות ודאות שונות.</p>
 <p dir="rtl">אזרחי ישראל פגיעים במיוחד בג&#8217;ונגל הזה, כי ישראל היא אולי המדינה הדמוקרטית היחידה בעולם בה כל אזרח מזוהה באמצעות מספר יחיד (ת.ז.) בבנק, במועדון לקוחות, במרפאה, וכו&#8217;.</p>
 <p dir="rtl">לבעיה הזאת יכול להיות פתרון פרימיטיבי ופשוט: לא לכתוב מספר על התעודה (בתוך השבב יש מספיק מספרים <img src='http://no2bio.org/wp-includes/images/smilies/icon_smile.gif' alt=':)' class='wp-smiley' />  ). הסופרמרקט רוצה לתת לך כרטיס מועדון? שייתן לך גם מספר (או שבב).</p>
 <p dir="rtl">מצד שני, המדינה יכולה לעזור לאזרחים ולכלכלה אם תפתח תעודה מזהה יחידה שתוכל לזהות את האזרח בפני גופים שונים (מסחריים וממשלתיים) בצורה שתמנע הצלבת מידע: הגורם המזהה (למשל קופה רושמת בחנות) מציג &#8220;רשיון גורם מזהה&#8221; (למשל של רשת הסופרמרקטים), ומקבל בתמורה אישור שזה אכן אזרח, וזה &#8220;מספר ת.ז.&#8221; שלו <strong>עבור הסופרמרקט</strong>. לאותו אזרח יש &#8220;מספרי ת.ז.&#8221; שונים במרפאה, בבנק, וכו&#8217;, וגם אם תהיה דליפת מידע מלאה או חלקית באירגונים האלה, עדיין לא יהיה פשוט לדעת מה המצב הרפואי של בעל חשבון בנק מסויים, האם הוא קונה מזון לא בריא בסופר, ואילו ספרים הוא קורא.</p>
 <h3 dir="rtl">מה נעשה בפועל?</h3>
-<p dir="rtl"><a href="post-mevaker.html" target="_blank">במשך כעשור</a> דחה הממשל את הטיפול בנושא, וכאשר הבעיה נעשתה קריטית, הוא התעקש להתנות את פתרון הבעיה בהקמת מאגר ביומטרי. כלומר, נוצרה הזדמנות להחליף מערכת מיושנת ומסוכנת במערכת מודרנית ובטוחה יותר, אך במקום זה מנסים להכריח אותנו לעבור למערכת מסוכנת הרבה יותר בטענה ש&#8221;אי אפשר לעצור את הקידמה&#8221;.</p>
+<p dir="rtl"><a href="post-mevaker.html" target="_blank">במשך כעשור</a> דחה השלטון את הטיפול בנושא, וכאשר הבעיה נעשתה קריטית, הוא התעקש להתנות את פתרון הבעיה בהקמת מאגר ביומטרי. כלומר, נוצרה הזדמנות להחליף מערכת מיושנת ומסוכנת במערכת מודרנית ובטוחה יותר, אך במקום זה מנסים להכריח אותנו לעבור למערכת מסוכנת הרבה יותר בטענה ש&#8221;אי אפשר לעצור את הקידמה&#8221;.</p>
 
           </div>
         </div>
