--- a/html/post-what-is-bio-db.html
+++ b/html/post-what-is-bio-db.html
@@ -97,7 +97,7 @@
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
-                          <li><a href="post-headstart-campaign.html">להשתתף בקמפיין מימון ההמון</a></li>
+                          <li><a href="post-brand_use_cc.html">להטמיע את הקמפיין</a></li>
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
@@ -126,6 +126,8 @@
 
                           <li><a href="post-dani-dolev.html">פרופ’ דני דולב</a></li>
 
+                          <li><a href="post-omer-reingold.html">פרופ’ עומר ריינגולד</a></li>
+
                           <li><a href="post-karine-nahon.html">פרופ’ קרין נהון</a></li>
                       </ul>
                   </li>
@@ -152,12 +154,10 @@
       <!-- Begin page content -->
       <div class="container">
         <div class="page-header text-center">
-          <div class="span12">
-            <h2>מהו מאגר ביומטרי?</h2>
-          </div>
+          <h2>מהו מאגר ביומטרי?</h2>
         </div>
         <div class="row">
-          <div class="span12">
+          <div class="col-8 col-offset-2">
             
             <p dir="rtl">מאגר ביומטרי הוא מאגר מוחשב של נתונים ביומטריים (למשל טביעות אצבעות ותווי פנים). בניגוד ל<strong>תעודת זהות</strong> ביומטרית, שמגינה על הנתונים שבתוכה מפני דליפה, מאגר ביומטרי הוא אוסף דיגיטלי של הנתונים הללו, שנשמר באופן בר-חיפוש. מאגר כזה מאפשר <strong>זיהוי של אדם בלי צורך בתעודה, ללא הסכמתו ולפעמים גם ללא ידיעתו </strong>(למשל זיהוי אנשים שמופיעים בתמונות מהפגנות או ברשתות חברתיות).</p>
 <p dir="rtl">ההבדל בין מאגר של נתונים ביומטריים למאגר אחר, למשל של סיסמאות או של כרטיסי אשראי, הוא שסיסמה או כרטיס אשראי אפשר לבטל ולהחליף במקרה שהם דלפו, ואצבעות ותווי פנים לא. הנחת היסוד שעומדת בבסיס הקמת מאגר ביומטרי היא שלעולם לא תהיה דליפה שלו.</p>
