--- a/html/contact.html
+++ b/html/contact.html
@@ -97,7 +97,7 @@
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
-                          <li><a href="post-headstart-campaign.html">להשתתף בקמפיין מימון ההמון</a></li>
+                          <li><a href="post-brand_use_cc.html">להטמיע את הקמפיין</a></li>
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
@@ -125,6 +125,8 @@
                           <li><a href="post-jerome-bordon.html">פרופ’ ג’רום בורדון</a></li>
 
                           <li><a href="post-dani-dolev.html">פרופ’ דני דולב</a></li>
+
+                          <li><a href="post-omer-reingold.html">פרופ’ עומר ריינגולד</a></li>
 
                           <li><a href="post-karine-nahon.html">פרופ’ קרין נהון</a></li>
                       </ul>
