--- a/html/post-bagatz.html
+++ b/html/post-bagatz.html
@@ -97,7 +97,7 @@
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
-                          <li><a href="post-headstart-campaign.html">להשתתף בקמפיין מימון ההמון</a></li>
+                          <li><a href="post-brand_use_cc.html">להטמיע את הקמפיין</a></li>
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
@@ -126,6 +126,8 @@
 
                           <li><a href="post-dani-dolev.html">פרופ’ דני דולב</a></li>
 
+                          <li><a href="post-omer-reingold.html">פרופ’ עומר ריינגולד</a></li>
+
                           <li><a href="post-karine-nahon.html">פרופ’ קרין נהון</a></li>
                       </ul>
                   </li>
@@ -152,12 +154,10 @@
       <!-- Begin page content -->
       <div class="container">
         <div class="page-header text-center">
-          <div class="span12">
-            <h2>הבג”צ נגד המאגר הביומטרי</h2>
-          </div>
+          <h2>הבג”צ נגד המאגר הביומטרי</h2>
         </div>
         <div class="row">
-          <div class="span12">
+          <div class="col-8 col-offset-2">
             
             <div dir="rtl" id="stcpDiv"><strong><a href="http://www.acri.org.il/he/?p=1750" target="_blank">העתירה, מסמכי משרד הפנים וחומרים נוספים</a> באתר האגודה לזכויות האזרח</strong></div>
 <h4 dir="rtl">אחרי פסיקת בג&#8221;ץ, 23/7/2012</h4>
