--- a/html/post-database-uses.html
+++ b/html/post-database-uses.html
@@ -97,7 +97,7 @@
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
-                          <li><a href="post-headstart-campaign.html">להשתתף בקמפיין מימון ההמון</a></li>
+                          <li><a href="post-brand_use_cc.html">להטמיע את הקמפיין</a></li>
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
@@ -126,6 +126,8 @@
 
                           <li><a href="post-dani-dolev.html">פרופ’ דני דולב</a></li>
 
+                          <li><a href="post-omer-reingold.html">פרופ’ עומר ריינגולד</a></li>
+
                           <li><a href="post-karine-nahon.html">פרופ’ קרין נהון</a></li>
                       </ul>
                   </li>
@@ -152,12 +154,10 @@
       <!-- Begin page content -->
       <div class="container">
         <div class="page-header text-center">
-          <div class="span12">
-            <h2>למה ישמש המאגר?</h2>
-          </div>
+          <h2>למה ישמש המאגר?</h2>
         </div>
         <div class="row">
-          <div class="span12">
+          <div class="col-8 col-offset-2">
             
             <p>במקור, המאגר יועד למניעת הרכשה כפולה בלבד, וכדי למנוע שימוש לרעה וזיהוי אנשים ללא תעודה, הוצעו פתרונות טכניים שנדחו על ידי הממשלה בגלל התנגדות המשטרה, שרוצה אפשרות לזהות אנשים גם ללא תעודה. לפי התכנון, תוכל המשטרה להוציא צו בבית משפט ולהשתמש במאגר בכל חקירה, כולל חקירות של עבירות טריוויאליות, שמוגדרות בחוק כ&#8221;עוון&#8221;. לדוגמה, &#8220;הפרעה לסדר הציבורי&#8221; היא עוון, וכך גם טיול עם כלב שאינו קשור.</p>
 
