--- a/html/post-doron-ofek-jewish.html
+++ b/html/post-doron-ofek-jewish.html
@@ -97,7 +97,7 @@
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
-                          <li><a href="post-headstart-campaign.html">להשתתף בקמפיין מימון ההמון</a></li>
+                          <li><a href="post-brand_use_cc.html">להטמיע את הקמפיין</a></li>
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
@@ -126,6 +126,8 @@
 
                           <li><a href="post-dani-dolev.html">פרופ’ דני דולב</a></li>
 
+                          <li><a href="post-omer-reingold.html">פרופ’ עומר ריינגולד</a></li>
+
                           <li><a href="post-karine-nahon.html">פרופ’ קרין נהון</a></li>
                       </ul>
                   </li>
@@ -152,12 +154,10 @@
       <!-- Begin page content -->
       <div class="container">
         <div class="page-header text-center">
-          <div class="span12">
-            <h2>הפתרון היהודי לבעיית המאגר</h2>
-          </div>
+          <h2>הפתרון היהודי לבעיית המאגר</h2>
         </div>
         <div class="row">
-          <div class="span12">
+          <div class="col-8 col-offset-2">
             
             <p dir="rtl">[תודה <a href="https://twitter.com/TheRealDod" target="_blank">לדוד</a> אשר הביא את הרעיון וגרם לי לחשוב עליו שוב ושוב]</p>
 <p dir="rtl">הפוסט הזה מן הסתם עוסק במאגר הביומטרי, אולם הוא יביא דרך חדשה לפתרון הבעיות שמשרד הפנים מציג – הפעם הפתרון מבוסס על המקורות היהודיים.</p>
