--- a/html/post-music.html
+++ b/html/post-music.html
@@ -97,7 +97,7 @@
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
-                          <li><a href="post-headstart-campaign.html">להשתתף בקמפיין מימון ההמון</a></li>
+                          <li><a href="post-brand_use_cc.html">להטמיע את הקמפיין</a></li>
 
                           <li class="active"><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
@@ -126,6 +126,8 @@
 
                           <li><a href="post-dani-dolev.html">פרופ’ דני דולב</a></li>
 
+                          <li><a href="post-omer-reingold.html">פרופ’ עומר ריינגולד</a></li>
+
                           <li><a href="post-karine-nahon.html">פרופ’ קרין נהון</a></li>
                       </ul>
                   </li>
@@ -152,12 +154,10 @@
       <!-- Begin page content -->
       <div class="container">
         <div class="page-header text-center">
-          <div class="span12">
-            <h2>מוזיקה באווירה ביומטרית</h2>
-          </div>
+          <h2>מוזיקה באווירה ביומטרית</h2>
         </div>
         <div class="row">
-          <div class="span12">
+          <div class="col-8 col-offset-2">
             
             <p dir="rtl">כדי להציע לנו מוזיקה, השתמשו ב<a href="https://twitter.com/search?q=%23Songs2SayNo2Bio" target="_blank">טוויטר</a> או <a href="https://facebook.com/hashtag/Songs2SayNo2Bio" target="_blank">פייסבוק</a> בתגית Songs2SayNo2Bio#</p>
 <p dir="rtl" align="center"><a href="https://www.youtube.com/playlist?list=PLJMShZxtd3i9VBuPhkiC4pFv8g0IckYrc" target="_blank">לצפיה ב-YouTube</a></p>
