--- a/html/post-pilot-knesset-protocol.html
+++ b/html/post-pilot-knesset-protocol.html
@@ -97,7 +97,7 @@
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
-                          <li><a href="post-headstart-campaign.html">להשתתף בקמפיין מימון ההמון</a></li>
+                          <li><a href="post-brand_use_cc.html">להטמיע את הקמפיין</a></li>
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
@@ -126,6 +126,8 @@
 
                           <li><a href="post-dani-dolev.html">פרופ’ דני דולב</a></li>
 
+                          <li><a href="post-omer-reingold.html">פרופ’ עומר ריינגולד</a></li>
+
                           <li><a href="post-karine-nahon.html">פרופ’ קרין נהון</a></li>
                       </ul>
                   </li>
@@ -152,12 +154,10 @@
       <!-- Begin page content -->
       <div class="container">
         <div class="page-header text-center">
-          <div class="span12">
-            <h2>איך לא עושים פיילוט</h2>
-          </div>
+          <h2>איך לא עושים פיילוט</h2>
         </div>
         <div class="row">
-          <div class="span12">
+          <div class="col-8 col-offset-2">
             
             <p dir="rtl">אמר אוסקר וויילד: מי שרוצה לשמור על החוק או לאכול נקניקיות, עדיף שלא ידע איך הכינו אותם. ומי שרוצה להשתתף בפיילוט?</p>
 <p dir="rtl">אתם מוזמנים לקרוא את <a href="http://www.scribd.com/doc/59522947/2011-06-02" target="_blank">פרוטוקול ועדת הפנים מיום 2/6/2011</a>  ולצחוק או לבכות. סיכום ופרשנות מצחיקים/עצובים עוד יותר אפשר למצוא בכתבה <a href="http://www.digitalwhisper.co.il/files/Zines/0x17/DW23-2-Pilot.pdf" target="_blank">איך לא עושים פיילוט</a> של עו&#8221;ד יונתן קלינגר שהופיעה <a href="http://www.digitalwhisper.co.il/issue23" target="_blank">במגזין Digital Whisper</a>.<br />
