--- a/html/post-webmasters.html
+++ b/html/post-webmasters.html
@@ -97,7 +97,7 @@
 
                           <li class="active"><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
-                          <li><a href="post-headstart-campaign.html">להשתתף בקמפיין מימון ההמון</a></li>
+                          <li><a href="post-brand_use_cc.html">להטמיע את הקמפיין</a></li>
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
@@ -126,6 +126,8 @@
 
                           <li><a href="post-dani-dolev.html">פרופ’ דני דולב</a></li>
 
+                          <li><a href="post-omer-reingold.html">פרופ’ עומר ריינגולד</a></li>
+
                           <li><a href="post-karine-nahon.html">פרופ’ קרין נהון</a></li>
                       </ul>
                   </li>
@@ -152,12 +154,10 @@
       <!-- Begin page content -->
       <div class="container">
         <div class="page-header text-center">
-          <div class="span12">
-            <h2>יש לכם אתר?</h2>
-          </div>
+          <h2>יש לכם אתר?</h2>
         </div>
         <div class="row">
-          <div class="span12">
+          <div class="col-8 col-offset-2">
             
             <h3 dir="rtl"><span style="font-size: 1.17em;">להתקין ווידג&#8217;ט</span></h3>
 <p dir="rtl">אם יש לכם בלוג או אתר, תוכלו להתקין ווידג&#8217;ט עדכונים דומה לזה שאתם רואים משמאל (רק בצבע אפור. הולך עם כל דבר <img src='http://no2bio.org/wp-includes/images/smilies/icon_smile.gif' alt=':)' class='wp-smiley' /> ).<br />
