--- a/html/post-what-are-the-dangers.html
+++ b/html/post-what-are-the-dangers.html
@@ -97,7 +97,7 @@
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
-                          <li><a href="post-headstart-campaign.html">להשתתף בקמפיין מימון ההמון</a></li>
+                          <li><a href="post-brand_use_cc.html">להטמיע את הקמפיין</a></li>
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
@@ -126,6 +126,8 @@
 
                           <li><a href="post-dani-dolev.html">פרופ’ דני דולב</a></li>
 
+                          <li><a href="post-omer-reingold.html">פרופ’ עומר ריינגולד</a></li>
+
                           <li><a href="post-karine-nahon.html">פרופ’ קרין נהון</a></li>
                       </ul>
                   </li>
@@ -152,12 +154,10 @@
       <!-- Begin page content -->
       <div class="container">
         <div class="page-header text-center">
-          <div class="span12">
-            <h2>מה הן הסכנות הטמונות באגירת מידע?</h2>
-          </div>
+          <h2>מה הן הסכנות הטמונות באגירת מידע?</h2>
         </div>
         <div class="row">
-          <div class="span12">
+          <div class="col-8 col-offset-2">
             
             <p>תעודת זהות ביומטרית יכולה רק לקשר בין התעודה לפנים או לטביעות אצבע של אדם בודד. מאגר נתונים ביומטריים של אוכלוסיה גדולה מאפשר את הכיוון ההפוך: לקשר בין פנים או טביעות אצבע לבין נתונים אחרים שנאגרו על אזרח. אם, למשל,  אפשר לצלם אדם, להשוות את התמונה למאגר וכך לגלות את מספר הזהות שלו, אפשר גם לדעת את כל הפרטים שמרשם האוכלוסין (<a href="http://www.haaretz.co.il/captain/net/1.1176417" target="_blank">שכבר דלף</a>) יכול לספק, כמו כתובת, מצב משפחתי ועוד. אפשר היה לפתור את הבעיות שנוצרו בעקבות דליפת מרשם האוכלוסין לו היו מחליפים את מספרי תעודות הזהות של כל התושבים, ובכך הופכים את המידע שדלף ללא רלוונטי, אבל מאגר ביומטרי יחליף את המספר הזה בנתונים שאי אפשר להחליף אותם, כמו הפנים והאצבעות שלנו, לכן דליפה שלו אינה ניתנת לתיקון.</p>
 
