--- a/html/post-bagatz.html
+++ b/html/post-bagatz.html
@@ -157,7 +157,7 @@
           <h2>הבג”צ נגד המאגר הביומטרי</h2>
         </div>
         <div class="row">
-          <div class="col-8 col-offset-2">
+          <div class="col-12">
             
             <div dir="rtl" id="stcpDiv"><strong><a href="http://www.acri.org.il/he/?p=1750" target="_blank">העתירה, מסמכי משרד הפנים וחומרים נוספים</a> באתר האגודה לזכויות האזרח</strong></div>
 <h4 dir="rtl">אחרי פסיקת בג&#8221;ץ, 23/7/2012</h4>
