--- a/html/post-bio-ad-meme.html
+++ b/html/post-bio-ad-meme.html
@@ -157,7 +157,7 @@
           <h2>מים “בטוח שכדאי”</h2>
         </div>
         <div class="row">
-          <div class="col-8 col-offset-2">
+          <div class="col-12">
             
             <p dir="rtl">הנה שני מימים על בסיס הקמפיין של ניסוי המאגר הביומטרי, שהוסיפו להם סיסמאות  באתר drpm.me.</p>
 <p dir="rtl">לחצו על תמונה כדי להגיע לדף המים שלה.</p>
