--- a/html/post-biometric-card.html
+++ b/html/post-biometric-card.html
@@ -157,7 +157,7 @@
           <h2>מהי תעודת זהות ביומטרית?</h2>
         </div>
         <div class="row">
-          <div class="col-8 col-offset-2">
+          <div class="col-12">
             
             <p>תעודות זהות ביומטריות הן תעודות חכמות שהשבב הדיגיטלי שלהן מכיל גם נתונים ביומטריים, המאפשרים לזהות אדם על פי נתוני גופו, למשל טביעות אצבעות ומבנה הפנים. אפשר לחבר אותן למערכת שכוללת מצלמת וידאו או סורק טביעות אצבעות, ולאשר שטביעת האצבע או הפנים אכן שייכות לבעל התעודה, אך אי אפשר להעתיק את הנתונים הביומטריים מתוך התעודה.</p>
 
