--- a/html/post-catching-criminal.html
+++ b/html/post-catching-criminal.html
@@ -157,7 +157,7 @@
           <h2>האם המאגר הביומטרי יקל על לכידת פושעים?</h2>
         </div>
         <div class="row">
-          <div class="col-8 col-offset-2">
+          <div class="col-12">
             
             <p>עבריינים רבים יודעים להימנע מהשארת פרטים מזהים בזירה, לכן מאגר ביומטרי לא יהיה יעיל נגדם. בפועל, המאגר יאפשר הטרדה ולעיתים אפילו הפללה של אזרחים שכל חטאם היה הימצאות בסמוך לזירת פשע. כל חקירה תספק מאות חשודים פוטנציאליים, והמשטרה תצטרך להשקיע עבודה רבה בחקירתם (תוך גרימת <a href="http://www.haaretz.co.il/misc/1.1195331" target="_blank">עוגמת נפש</a> לנחקרים), במקום בחקירת הפשע עצמו.</p>
 
