--- a/html/post-current-status.html
+++ b/html/post-current-status.html
@@ -157,7 +157,7 @@
           <h2>תמונת מצב</h2>
         </div>
         <div class="row">
-          <div class="col-8 col-offset-2">
+          <div class="col-12">
             
             <ul>
 <li dir="rtl"><strong>8/7/13:</strong> <a href="http://www.ynet.co.il/articles/0,7340,L-4401747,00.html" target="_blank">הפיילוט למאגר מתחיל</a> בלשכות האוכלוסין בראשון לציון ואשדוד.</li>
