--- a/html/post-doron-ofek-democracy.html
+++ b/html/post-doron-ofek-democracy.html
@@ -157,7 +157,7 @@
           <h2>שהדמוקרטיה לא תעלה לכם לראש</h2>
         </div>
         <div class="row">
-          <div class="col-8 col-offset-2">
+          <div class="col-12">
             
             <p dir="rtl">לא מעט נכתב על הסכנות של דליפת המאגר הביומטרי, פריצתו וגניבת זהות ממנו. נקודה שזוכה למעט פחות חשיפה היא היכולת של השלטון/הממשל לעשות שימוש במאגר שכזה – שימוש שלא הוגדר בחוק.</p>
 <h3 dir="rtl">מהי הדמוקרטיה הישראלית?</h3>
