--- a/html/post-doron-ofek-jewish.html
+++ b/html/post-doron-ofek-jewish.html
@@ -157,7 +157,7 @@
           <h2>הפתרון היהודי לבעיית המאגר</h2>
         </div>
         <div class="row">
-          <div class="col-8 col-offset-2">
+          <div class="col-12">
             
             <p dir="rtl">[תודה <a href="https://twitter.com/TheRealDod" target="_blank">לדוד</a> אשר הביא את הרעיון וגרם לי לחשוב עליו שוב ושוב]</p>
 <p dir="rtl">הפוסט הזה מן הסתם עוסק במאגר הביומטרי, אולם הוא יביא דרך חדשה לפתרון הבעיות שמשרד הפנים מציג – הפעם הפתרון מבוסס על המקורות היהודיים.</p>
