--- a/html/post-foreigners.html
+++ b/html/post-foreigners.html
@@ -157,7 +157,7 @@
           <h2>אם אסע לארה”ב, יוכנסו נתוני הביומטריים למאגר שלהם. מה ההבדל?</h2>
         </div>
         <div class="row">
-          <div class="col-8 col-offset-2">
+          <div class="col-12">
             
             <p dir="rtl">מדינות רבות &#8211; וארה&#8221;ב ביניהן &#8211; מחזיקות מאגר ביומטרי של זרים שמבקרים בהן, מיעוטים, ושאר מיני “אזרחים מדרגה שניה”. הדבר מתאפשר מהסיבות הבאות:</p>
 <ol>
