--- a/html/post-forgery-statistics.html
+++ b/html/post-forgery-statistics.html
@@ -157,7 +157,7 @@
           <h2>מה היקף תופעת הזיוף כיום?</h2>
         </div>
         <div class="row">
-          <div class="col-8 col-offset-2">
+          <div class="col-12">
             
             <p dir="rtl">לא ידוע. במשרד הפנים אין נתונים בנוגע לכמה תעודות מזוייפות קיימות כיום בישראל. למרות העדר המידע, &#8220;נתון&#8221; שכזה הובא פעמים רבות (<a href="https://www.youtube.com/watch?v=vAmRogyy3Ic&amp;t=36m26s" target="_blank">ובלהט</a>) כדי להצדיק לכאורה את הקמת המאגר: <em>&#8220;יש כיום 350,000 תעודות זהות מזוייפות בישראל&#8221;.</em></p>
 <p dir="rtl">גם אם נתון זה היה נכון, תעודת זהות חכמה <strong>בלי מאגר</strong> <a href="https://www.youtube.com/watch?v=vAmRogyy3Ic&amp;t=48m40s" target="_blank">היתה פותרת את הבעיה בכ-99% המקרים</a> (ואת האחוז הנוסף בו פקיד עשוי להנפיק תעודה מזוייפת עקב הונאה/שוחד/סחיטה/וכו&#8217; עדיף היה לפתור באמצעות <strong>עבודת</strong> בילוש, ולא על ידי הפיכתנו ל<a href="post-the-problem.html" target="_blank">מדינת בילוש</a> כ&#8221;אמצעי יעול&#8221; ש&#8221;יחסוך&#8221; עבודה כזו).</p>
