--- a/html/post-know-more.html
+++ b/html/post-know-more.html
@@ -157,7 +157,7 @@
           <h2>זה שאינו יודע לשאול ישלם ביוקר</h2>
         </div>
         <div class="row">
-          <div class="col-8 col-offset-2">
+          <div class="col-12">
             
             <p dir="rtl">צמד המלים “המאגר הביומטרי” הפך לשגור בתקשורת בשנים האחרונות, כהכנה למציאות חדשה שנרקמה, בעיקר מאחורי הקלעים, במסדרונות הכנסת. רבות נעשה כדי לקדם את המציאות הזו, שבה בישראל קיים מאגר ביומטרי, אבל מעט מאוד נעשה כדי לעזור לציבור הרחב להבין במה מדובר ומה הן ההשלכות של המאגר על חיי כולנו. עבור מי שמכירים את ההשלכות והסכנות, המסלול המהיר אל המאגר הביומטרי הוא מדרון חלקלק, אל מצב שבו הפרטיות של אזרחי מדינת ישראל מופקרת &#8211; בידי המדינה ושלוחותיה, כמו גם בידי גורמים בעלי אינטרס זר.</p>
 <p dir="rtl">חסרונו של שיח ציבורי בעניין הוליד בלבול ודיס-אינפורמציה ביחס לתחום. ראשית, כדאי להבדיל בין תחום הזיהוי הביומטרי והמאגר הביומטרי עצמו. זיהוי ביומטרי הוא שם למגוון טכניקות שנועדו לזהות בני אדם על פי תכונות פיזיולוגיות או התנהגותיות. השימוש בזיהוי ביומטרי הוא לרוב לצורך בקרת גישה, למשל כדי לאפשר גישה בלעדית לרכוש מאובטח על ידי סריקת טביעת האצבע בכניסה לחדר או ברכב.</p>
