--- a/html/post-mevaker.html
+++ b/html/post-mevaker.html
@@ -157,7 +157,7 @@
           <h2>דו”ח מבקר המדינה 2010</h2>
         </div>
         <div class="row">
-          <div class="col-8 col-offset-2">
+          <div class="col-12">
             
             <h4 dir="rtl"><a href="http://www.mevaker.gov.il/serve/contentTree.asp?bookid=595&amp;id=193&amp;contentid=11664&amp;parentcid=undefined&amp;bctype=11663&amp;sw=1280&amp;hw=730#thisTr64" target="_blank">המסמך באתר מבקר המדינה</a></h4>
 <p dir="rtl"><a href="http://technation.themarker.com/internet-technologies/1.1768804" target="_blank">דה מארקר</a>: דו&#8221;ח מבקר המדינה שמתפרסם היום, מותח ביקורת חריפה על התנהלות משרד הפנים בקידום תעודות הזהות החכמות, ומצביע על שורת מחדלים בהליך קבלת ההחלטות וניהול התקציבים בנושא</p>
