--- a/html/post-music.html
+++ b/html/post-music.html
@@ -157,7 +157,7 @@
           <h2>מוזיקה באווירה ביומטרית</h2>
         </div>
         <div class="row">
-          <div class="col-8 col-offset-2">
+          <div class="col-12">
             
             <p dir="rtl">כדי להציע לנו מוזיקה, השתמשו ב<a href="https://twitter.com/search?q=%23Songs2SayNo2Bio" target="_blank">טוויטר</a> או <a href="https://facebook.com/hashtag/Songs2SayNo2Bio" target="_blank">פייסבוק</a> בתגית Songs2SayNo2Bio#</p>
 <p dir="rtl" align="center"><a href="https://www.youtube.com/playlist?list=PLJMShZxtd3i9VBuPhkiC4pFv8g0IckYrc" target="_blank">לצפיה ב-YouTube</a></p>
