--- a/html/post-pilot-knesset-protocol.html
+++ b/html/post-pilot-knesset-protocol.html
@@ -157,7 +157,7 @@
           <h2>איך לא עושים פיילוט</h2>
         </div>
         <div class="row">
-          <div class="col-8 col-offset-2">
+          <div class="col-12">
             
             <p dir="rtl">אמר אוסקר וויילד: מי שרוצה לשמור על החוק או לאכול נקניקיות, עדיף שלא ידע איך הכינו אותם. ומי שרוצה להשתתף בפיילוט?</p>
 <p dir="rtl">אתם מוזמנים לקרוא את <a href="http://www.scribd.com/doc/59522947/2011-06-02" target="_blank">פרוטוקול ועדת הפנים מיום 2/6/2011</a>  ולצחוק או לבכות. סיכום ופרשנות מצחיקים/עצובים עוד יותר אפשר למצוא בכתבה <a href="http://www.digitalwhisper.co.il/files/Zines/0x17/DW23-2-Pilot.pdf" target="_blank">איך לא עושים פיילוט</a> של עו&#8221;ד יונתן קלינגר שהופיעה <a href="http://www.digitalwhisper.co.il/issue23" target="_blank">במגזין Digital Whisper</a>.<br />
