--- a/html/post-the-problem.html
+++ b/html/post-the-problem.html
@@ -157,7 +157,7 @@
           <h2>מה הבעיה?</h2>
         </div>
         <div class="row">
-          <div class="col-8 col-offset-2">
+          <div class="col-12">
             
             <p dir="rtl">תעודות הזהות שלנו מורכבות מפלסטיק, נייר ותמונה. כבר בשנות ה-90 של המאה הקודמת היה ברור שעם ההתפתחות הטכנולוגית, נוצרות (והולכות ומחריפות) שתי בעיות:</p>
 <ol>
