--- a/html/post-what-can-be-done.html
+++ b/html/post-what-can-be-done.html
@@ -157,7 +157,7 @@
           <h2>מה אנחנו יכולים לעשות?</h2>
         </div>
         <div class="row">
-          <div class="col-8 col-offset-2">
+          <div class="col-12">
             
             <p dir="rtl">ביום שבו יתחיל רשמית הניסוי (הפיילוט) של המאגר הביומטרי, אפשר וכדאי יהיה לסרב להשתתף בו, משתי סיבות.</p>
 <ul dir="rtl">
