--- a/html/post-will-it-be-protected.html
+++ b/html/post-will-it-be-protected.html
@@ -157,7 +157,7 @@
           <h2>האם המאגר הביומטרי יהיה מוגן בפני עבריינים?</h2>
         </div>
         <div class="row">
-          <div class="col-8 col-offset-2">
+          <div class="col-12">
             
             <p dir="rtl">בניגוד לתעודת זהות ביומטרית, שכאמור, מגינה על הנתונים הביומטריים שלנו, המאגר הביומטרי הוא כמו כל מאגר מידע אחר ואינו חסין מפני הדלפות ופריצות. ככל שהמידע רגיש יותר, כמו במקרה של המאגר הביומטרי, גדלה האטרקטיביות שלו. מידע יכול לדלוף בכמה דרכים: האנשים שמופקדים על שמירתו ועל השימוש בו <a href="http://www.haaretz.co.il/captain/net/1.1176417" target="_blank">יכולים להדליף אותו</a>, לפעמים ניתן להאזין לתקשורת בין גורמים שונים במערכת (למשל בין המכשיר שמזהה אותך לבין המאגר), או לפרוץ למאגר עצמו. אפשר גם לשער שיהיו מקרים של <a href="http://www.haaretz.co.il/mobile/.premium-1.2069837" target="_blank">ניצול לרעה של המערכת על ידי גורמים מורשים</a>.  בכל מקרה, את המידע שדלף ומועבר בין גורמים שונים או ניתן להורדה ברשת, לא ניתן להשיב. לאחרונה <a href="http://www.haaretz.co.il/news/law/1.1529808" target="_blank">נחשפו האחראים</a> להדלפת מרשם האוכלוסין. החשיפה מאפשרת <strong>להעניש</strong> אותם, אך אין לה <strong>שום משמעות מעשית</strong> כי הנתונים שלנו עדיין נגישים לכל מי שרוצה להשתמש בהם לרעה.</p>
 
