--- a/html/post-other-countries.html
+++ b/html/post-other-countries.html
@@ -157,7 +157,7 @@
           <h2>מה המצב במדינות אחרות?</h2>
         </div>
         <div class="row">
-          <div class="col-8 col-offset-2">
+          <div class="col-12">
             
             <p dir="rtl">בניגוד לשקרים וחצאי אמיתות שמפוזרים בנושא, <a href="https://www.youtube.com/watch?v=4rGEMy3Usxo" target="_blank">נכון להיום</a> – המדינות המערביות היחידות בהן מדובר על מאגר ביומטרי חובה לכל האזרחים הן ספרד ומקסיקו*.  יש מדינות אחרות (כמו אנגליה וצרפת), בהן ניסה הממשל להקים מאגר כזה ונכשל בגלל התנגדות הציבור וגורמים מקרב השלטון עצמו. קיימות גם מדינות כמו שויץ אשר מתחזקות מאגר ביומטרי אך לאזרח נשמרת זכות הבחירה אם להצטרף אליו. בספרד ההתנגדות נמצאת בעיצומה ומקסיקו נמצאת תחת לחץ עצום של ארה&#8221;ב. אנחנו בכל אופן מקווים שישראל תצטרף למדינות הדמוקרטיות המובהקות בהן בוטל הרעיון להקים מאגר, או שהיה ברור מאליו שאין להציע כזה כלל (כמו בגרמניה).</p>
 <p><iframe src="//www.youtube.com/embed/4rGEMy3Usxo" height="315" width="560" allowfullscreen="" frameborder="0"></iframe></p>
