--- a/html/post-webmasters.html
+++ b/html/post-webmasters.html
@@ -157,7 +157,7 @@
           <h2>יש לכם אתר?</h2>
         </div>
         <div class="row">
-          <div class="col-8 col-offset-2">
+          <div class="col-12">
             
             <h3 dir="rtl"><span style="font-size: 1.17em;">להתקין ווידג&#8217;ט</span></h3>
 <p dir="rtl">אם יש לכם בלוג או אתר, תוכלו להתקין ווידג&#8217;ט עדכונים דומה לזה שאתם רואים משמאל (רק בצבע אפור. הולך עם כל דבר <img src='http://no2bio.org/wp-includes/images/smilies/icon_smile.gif' alt=':)' class='wp-smiley' /> ).<br />
